--- a/.github/workflows/predict.yml
+++ b/.github/workflows/predict.yml
@@ -1,9 +1,9 @@
-﻿name: Daily Predict
+name: Daily Predict
 
 on:
   schedule:
-    - cron: "50 7 * * *"  # tous les jours à 07:50 UTC (~ 08:50 Paris/Rome)
-  workflow_dispatch: {}   # déclenchement manuel possible
+    - cron: "0 6 * * *"   # 06:00 UTC = 08:00 Cameroun/Italie
+  workflow_dispatch: {}    # bouton "Run workflow"
 
 jobs:
   run-predict:
@@ -21,29 +21,36 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # joblib peut ne pas être listé selon ton repo
+          # au cas où ce n'est pas listé
           pip install joblib requests
 
-      - name: Run prediction
+      - name: Ensure package structure
+        run: |
+          mkdir -p src/api
+          touch src/__init__.py
+          touch src/api/__init__.py
+
+      - name: Train then Predict
         env:
-          EXCHANGE: ${{ secrets.EXCHANGE }}
-          API_KEY: ${{ secrets.API_KEY }}
-          API_SECRET: ${{ secrets.API_SECRET }}
-          USE_TESTNET: ${{ secrets.USE_TESTNET }}
-          SYMBOLS: ${{ secrets.SYMBOLS }}
-          TIMEFRAME: ${{ secrets.TIMEFRAME }}
-          LIMIT: ${{ secrets.LIMIT }}
-          VOL_WINDOW: ${{ secrets.VOL_WINDOW }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TRADE_ENABLED: "false"
+          # valeurs par défaut (pas besoin de secrets pour celles-ci)
+          EXCHANGE: bybit
+          USE_TESTNET: "false"
+          TIMEFRAME: "4h"
+          SYMBOLS: "BTC/USDT,ETH/USDT,SOL/USDT"
+          LIMIT: "2000"
+          VOL_WINDOW: "20"
           DATA_DIR: "./data"
         run: |
+          python -m src.train_model
           python -m src.predict
 
       - name: Upload artifacts (logs)
         uses: actions/upload-artifact@v4
         with:
           name: predict-logs
-          path: data/predictions_*.json
+          path: |
+            data/predictions_*.json
+            data/pred_*.csv
           if-no-files-found: ignore
