--- a/.github/workflows/predict.yml
+++ b/.github/workflows/predict.yml
@@ -1,12 +1,12 @@
-name: Daily Predict
+name: Daily Predict (Telegram)
 
 on:
   schedule:
-    - cron: "0 6 * * *"    # 06:00 UTC = 08:00 chez toi
-  workflow_dispatch: {}     # bouton "Run workflow"
+    - cron: "0 6 * * *"     # 06:00 UTC
+  workflow_dispatch: {}
 
 jobs:
-  run-predict:
+  predict:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,34 +21,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # ceinture et bretelles si non listés :
           pip install joblib requests
-
-      - name: Ensure package structure
-        run: |
-          mkdir -p src/api
-          touch src/__init__.py
-          touch src/api/__init__.py
 
       - name: Run daily prediction (sends Telegram)
         env:
-          EXCHANGE: ${{ secrets.EXCHANGE }}               # ex: binance
-          SYMBOLS: ${{ secrets.SYMBOLS }}                 # ex: BTC/USDT,ETH/USDT,SOL/USDT
-          TIMEFRAME: ${{ secrets.TIMEFRAME }}             # ex: 4h
-          LIMIT: ${{ secrets.LIMIT }}                     # ex: 1200 ou 2000
+          EXCHANGE: kraken
+          SYMBOLS: BTC/USDT,ETH/USDT,SOL/USDT
+          TIMEFRAME: 4h
+          LIMIT: "1200"
+          DATA_DIR: ./data
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_CHAT_ID:  ${{ secrets.TELEGRAM_CHAT_ID }}
+          TRADE_ENABLED: "false"
         run: |
-          echo "Working dir: $(pwd)"
-          ls -R
-          export PYTHONPATH="$PWD"
           python -m src.predict
-
-      - name: Upload artifacts (logs)
-        uses: actions/upload-artifact@v4
-        with:
-          name: predict-logs
-          path: |
-            data/predictions_*.json
-            data/pred_*.csv
-          if-no-files-found: ignore
