--- a/.github/workflows/daily_retrain.yml
+++ b/.github/workflows/daily_retrain.yml
@@ -5,15 +5,27 @@ on:
     - cron: "30 5 * * *"     # 05:30 UTC (avant la prédiction)
   workflow_dispatch: {}
 
-  permissions:
-  contents: write   # <— nécessaire pour pousser les modèles
+# ✅ doit être au niveau racine (pas sous "on:")
+permissions:
+  contents: write
 
 jobs:
   retrain:
     runs-on: ubuntu-latest
+
+    # ✅ lis les valeurs depuis Secrets/Variables (pas en dur)
+    env:
+      EXCHANGE: ${{ secrets.EXCHANGE || vars.EXCHANGE }}   # ex: kucoin
+      SYMBOLS:  ${{ secrets.SYMBOLS  || vars.SYMBOLS  }}   # ex: BTC/USDT,ETH/USDT,SOL/USDT
+      TIMEFRAME: ${{ secrets.TIMEFRAME || vars.TIMEFRAME }} # ex: 4h
+      LIMIT:    ${{ secrets.LIMIT    || vars.LIMIT    }}   # ex: 1500
+      DATA_DIR: ./data
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # ✅ nécessaire pour pouvoir commit/push
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -24,27 +36,30 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install joblib requests
 
-      - name: Fetch OHLCV (~4y) & train models
-        env:
-          EXCHANGE: kraken
-          SYMBOLS: BTC/USDT,ETH/USDT,SOL/USDT
-          TIMEFRAME: 4h
-          LIMIT: "1500"
-          DATA_DIR: ./data
+      # (facultatif) petit debug pour vérifier l'exchange pris en compte
+      - name: Debug settings
         run: |
-          # crée le CSV si manquant puis entraîne
+          python - <<'PY'
+          from src.config import settings
+          print("settings.exchange =", settings.exchange)
+          print("symbols =", settings.symbols)
+          print("timeframe =", settings.timeframe, "limit =", settings.limit)
+          PY
+
+      - name: Fetch OHLCV & train models
+        run: |
           python -c "from src.train import ensure_training_csv; ensure_training_csv()"
           python -m src.train
 
       - name: Commit updated models & report
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "github-actions"
+          git config --global user.name  "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add models/* || true
+          git add models/*.pkl || true
+          git add data/ml_training_report.csv || true
           git commit -m "Update trained models" || echo "Nothing to commit"
           git push
 
