--- a/.github/workflows/daily_predict.yml
+++ b/.github/workflows/daily_predict.yml
@@ -1,26 +1,16 @@
-﻿name: Daily Predict (Telegram)
+name: Daily Predict (Telegram)
 
 on:
   schedule:
-    - cron: "0 6 * * *"     # tous les jours 06:00 UTC (≈ 08:00 Europe centrale)
-  workflow_dispatch:
+    - cron: "00 06 * * *" # 06:00 UTC, après le retrain
+  workflow_dispatch: {}
+
+permissions:
+  contents: read
 
 jobs:
   predict:
     runs-on: ubuntu-latest
-
-    env:
-      EXCHANGE: ${{ secrets.EXCHANGE }}
-      USE_TESTNET: ${{ secrets.USE_TESTNET }}
-      SYMBOLS: ${{ secrets.SYMBOLS }}
-      TIMEFRAME: ${{ secrets.TIMEFRAME }}
-      LIMIT: ${{ secrets.LIMIT }}
-      DATA_DIR: ${{ secrets.DATA_DIR }}
-      TRADE_ENABLED: ${{ secrets.TRADE_ENABLED }}
-      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      API_KEY: ${{ secrets.API_KEY }}
-      API_SECRET: ${{ secrets.API_SECRET }}
 
     steps:
       - name: Checkout
@@ -36,6 +26,28 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Télécharge le DERNIER artifact "trained-models" du workflow de retrain
+      # (cette action va chercher dans le dernier run "success" du fichier daily_retrain.yml)
+      - name: Download trained models artifact
+        uses: dawidd6/action-download-artifact@v6
+        with:
+          workflow: daily_retrain.yml
+          workflow_conclusion: success
+          name: trained-models
+          path: .
+
+      - name: Show models content
+        run: |
+          ls -lah
+          ls -lah models || true
+
       - name: Run daily prediction (sends Telegram)
+        env:
+          EXCHANGE: ${{ vars.EXCHANGE || 'kucoin' }}
+          SYMBOLS: ${{ vars.SYMBOLS || 'BTC/USDT,ETH/USDT,SOL/USDT' }}
+          TIMEFRAME: ${{ vars.TIMEFRAME || '4h' }}
+          LIMIT: ${{ vars.LIMIT || '5000' }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python -m src.predict
