--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ matplotlib==3.9.2
 joblib==1.4.2
 requests==2.32.3
 scikit-learn==1.5.2   # 🔥 Ajout obligatoire
+
+# --- Ajouts pour alt-data ---
+feedparser==6.0.11    # lecture flux RSS (ex: news crypto)
+textblob==0.18.0.post0  # analyse de sentiment simple
