--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 ccxt==4.3.87
 pandas==2.2.2
 numpy==1.26.4
@@ -21,3 +22,6 @@ scikit-learn==1.5.2   # 🔥 Ajout obligatoire
 # --- Ajouts pour alt-data ---
 feedparser==6.0.11    # lecture flux RSS (ex: news crypto)
 textblob==0.18.0.post0  # analyse de sentiment simple
+
+feedparser==6.0.11
+vaderSentiment==3.3.2
